--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
