add mouse animations and components stracture

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-spring": "^9.7.3",
     "sass": "^1.68.0"
   },
   "devDependencies": {
