--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:fix": "prettier --write ./src"
   },
   "dependencies": {
+    "firebase": "^8.6.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
